--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,29 @@ on:
   push:
 
 jobs:
-  quality:
+  check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        project-filter: [portfolio]
+
     steps:
-      - name: checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: setup biome
-        uses: biomejs/setup-biome@v2
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
-          version: latest
+          version: 10.11.0
 
-      - name: run biome
-        run: biome ci .
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Run check for ${{ matrix.project-filter }}
+        run: pnpm run check:${{ matrix.project-filter }}
