--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
+	"name": "bruhs",
 	"private": true,
 	"scripts": {
-		"dev": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"check": "biome check --write"
-	},
-	"dependencies": {
-		"@astrojs/sitemap": "3.2.1",
-		"@astrojs/tailwind": "5.1.2",
-		"@astrojs/ts-plugin": "1.10.4",
-		"astro": "5.0.0-beta.6",
-		"sharp": "0.33.4",
-		"tailwindcss": "3.4.4"
+		"build": "turbo run build",
+		"dev:portfolio": "turbo run dev --filter=portfolio",
+		"dev:snip": "turbo run dev --filter=snip",
+		"check:portfolio": "turbo run check --filter=portfolio",
+		"check:snip": "turbo run check --filter=snip"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4"
+		"turbo": "2.5.3"
+	},
+	"packageManager": "pnpm@10.11.0",
+	"engines": {
+		"node": ">=20"
 	}
 }
