ci(git): cleanup project filter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        project-filter: [portfolio, snip, macro]
+        project-filter: [portfolio]
 
     steps:
       - name: Checkout repository
