--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -8,14 +8,14 @@
 		"check": "biome check --write"
 	},
 	"dependencies": {
-		"@astrojs/sitemap": "3.2.1",
-		"@astrojs/tailwind": "5.1.2",
+		"@astrojs/sitemap": "3.4.1",
 		"@astrojs/ts-plugin": "1.10.4",
-		"astro": "5.0.0-beta.6",
-		"sharp": "0.33.4",
-		"tailwindcss": "3.4.4"
+		"@bnle/ui": "workspace:*",
+		"astro": "5.11.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4"
+		"@biomejs/biome": "1.9.4",
+		"@tailwindcss/vite": "4.1.11",
+		"tailwindcss": "4.1.11"
 	}
 }
