--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -11,7 +11,8 @@
 		"@astrojs/sitemap": "3.4.1",
 		"@astrojs/ts-plugin": "1.10.4",
 		"@bnle/ui": "workspace:*",
-		"astro": "5.11.0"
+		"astro": "5.11.0",
+		"sharp": "0.34.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
